--- a/src/app/pages/join/insurance-information/insurance-information.component.html
+++ b/src/app/pages/join/insurance-information/insurance-information.component.html
@@ -301,17 +301,17 @@
             <p>자동차사고로 인하여 타인에게 상해를 입힌 경우 피보험자가 형사합의금으로 지급한 금액을 교통사고처리지원금으로 지급 </p>
 
             <ul class="no-list-style no-padding-left">
-                <li>가. 피해자가 사망한 경우 : 3,000만원 한도로 지급 </li>
+                <li>가. 피해자가 사망한 경우 : 1.5억원 한도로 지급 </li>
                 <li>
                     나. 중대법규위반 교통사고로 피해자가 42일 이상 진단을 받은 경우 
                     <ul class="list-style-number padding-left-38">
-                        <li>42일 이상 70일 미만 진단 시 : 1,000만원 한도 실손 보상</li>
-                        <li>70일 이상 140일 미만 진단 시 : 2,000만원 한도 실손 보상 </li>
-                        <li>140일 이상 진단 시 : 3,000만원 한도 실손 보상 </li>
+                        <li>42일 이상 70일 미만 진단 시 : 2,000만원 한도 실손 보상</li>
+                        <li>70일 이상 140일 미만 진단 시 : 8,000만원 한도 실손 보상 </li>
+                        <li>140일 이상 진단 시 : 1억원 한도 실손 보상 </li>
                     </ul>
                 </li>
                 <li>
-                    일반교통사고로 피해자에게 중상해를 입혀 공소제기 되거나 상해급수 1급, 2급 또는 3급에 해당하는 부상을 입힌 경우 3,000만원 한도로 지급 
+                    일반교통사고로 피해자에게 중상해를 입혀 공소제기 되거나 상해급수 1급, 2급 또는 3급에 해당하는 부상을 입힌 경우 1억원 한도로 지급 
                 </li>
             </ul>
 
